--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  
+  font-family: 'IBM Plex Sans';
 } *::-webkit-scrollbar {
   display: none;
 }
@@ -9,62 +11,72 @@
 body {
   padding: 0;
   margin: 0;
+
+  color: #fff;
 }
 
 .mainArea {
+  width: 100vw;
   height: 100vh;
   
-  background-color: #999;
+  background-color: #0D0F1D;
 }
 .mainArea:nth-child(2) {background-color: #888;}
-.mainArea:nth-child(3) {background-color: #777;}
+.mainArea:nth-child(3) {background-color: #333;}
 
 
 /* =========== header ============ */
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
+  z-index: 3;
   
   width: 100%;
-  height: 100px;
-  z-index: 100;
+  height: 100%;
 
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.header-drop {
+  transform: translateY(-80px);
 }
 
 .container-wrap {
   display: flex;
   justify-content: space-between;
-}
 
-.container-wrap, .container-wrap__logo, .container-wrap__nav, .nav__main-menu {height: 100%;}
+  width: 100%;
+}
 
 
 /* ============== header - logo wrap ============= */
-.container-wrap__logo, .nav__main-menu {
-  padding: 32px;
+.container-wrap__logo {
+  padding: 24px;
 
   cursor: pointer;
 }
 
 
-/* =========== header - menu wrap ============ */
+/* =========== header - nav wrap ============ */
+.container-wrap__nav {
+  width: 100%;
+  height: 100%;
+}
+
 .main-menu__hamburger {
   display: inline-block;
-  position: relative;
-  margin-top: 12px;
+  position: absolute;
+  top: 38px;
+  right: 24px;
 
-  width: 48px;
+  width: 42px;
   height: 32px;
-
-  background-color: transparent;
 }
 
 .burger-icon, .burger-icon::before, .burger-icon::after {
   display: block;
   position: absolute;
   
-  width: 48px;
+  width: 42px;
   height: 3px;
 
   border-radius: 3px;
@@ -79,8 +91,37 @@ body {
 .burger-icon::after {top: 12px;}
 
 
-.main-menu__list {
-  display: none;
+/* =========== menu - list wrap ============ */
+.menu__overlay-list {
+  position: fixed;
+  left: 0;
+  z-index: 10;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.274)
+}
+
+.menu__list {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  z-index: 10;
+  padding: 0;
+  margin-top: 8%;
+  margin: 8% 20% 0% 20%;
+
+  width: 100%;
 
   list-style: none;
+  text-decoration: none;
+}
+
+.menu__list-item {
+  height: 11%;
+
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: inherit;
 }
