--- a/styles.css
+++ b/styles.css
@@ -50,14 +50,14 @@ body {
 
 /* ============== header - logo wrap ============= */
 .container-wrap__logo {
-  padding: 24px;
+  margin: 24px;
 
   cursor: pointer;
 }
 
 
 /* =========== header - nav wrap ============ */
-.container-wrap__nav {
+.container-wrap__nav {  
   width: 100%;
   height: 100%;
 }
@@ -92,36 +92,58 @@ body {
 
 
 /* =========== menu - list wrap ============ */
-.menu__overlay-list {
+.main-menu__overlay-list {
   position: fixed;
   left: 0;
   z-index: 10;
+  padding: 8vh;
 
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.274)
 }
 
-.menu__list {
+.main-menu__overlay-list ul {
   display: flex;
   flex-flow: column nowrap;
   justify-content: start;
   z-index: 10;
   padding: 0;
-  margin-top: 8%;
-  margin: 8% 20% 0% 20%;
+  margin: 0 auto;
 
-  width: 100%;
-
-  list-style: none;
-  text-decoration: none;
+  width: 66%;
 }
 
-.menu__list-item {
-  height: 11%;
+.list__items {
+  margin: .2rem;
+  
+  font-size: 2.8rem;
+  font-weight: 600;
+  list-style: none;
+}
 
-  font-size: 2.5rem;
-  font-weight: bold;
-  line-height: inherit;
+.list__items a {
+  color: #fff;
+  text-decoration: none;
+}
+.list__items a:hover {color: #f50008;}
+
+.list__select-lang {
+  display: flex;
+  align-items: center;
+  margin-top: 8vh;
+  width: 30vw;
+  font-size: 1.8rem;
+}
+
+.lang-list {
+  margin: .4rem;
+}
+
+.lang-bar {
+  width: 1px;
+  height: 1.5rem;
+
+  background-color: #fff;
 }
