--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     scrollbar-width: none; /* Firefox */
   
   font-family: 'IBM Plex Sans';
+  font-size: 16px;
 } *::-webkit-scrollbar {
   display: none;
 }
@@ -13,16 +14,9 @@ body {
   margin: 0;
 
   color: #fff;
-}
-
-.mainArea {
-  width: 100vw;
-  height: 100vh;
-  
   background-color: #0D0F1D;
 }
-.mainArea:nth-child(2) {background-color: #888;}
-.mainArea:nth-child(3) {background-color: #333;}
+
 
 
 /* =========== header ============ */
@@ -38,7 +32,7 @@ body {
   transform: translateY(-80px);
 }
 
-.container-wrap {
+.header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -47,8 +41,9 @@ body {
   height: 100%;
 }
 
-/* =========== header - nav wrap ============ */
-.container-wrap__nav { 
+
+/* =========== header : nav area ============ */
+.container__nav { 
   width: 44px;
 }
 
@@ -77,7 +72,7 @@ body {
 .burger-icon::after {top: 10px;}
 
 
-/* =========== header - nav wrap : list ============ */
+/* =========== header : nav wrap - list ============ */
 .menu__overlay-list {
   position: fixed;
   left: 0;
@@ -139,46 +134,61 @@ body {
 }
 
 
-/* =========== main - intro page =========== */
-.intro-page {
-  background: url(/img/intro-bg.png);
-  background-size: cover;
-  background-color: #0D0F1D;
+
+/* ========================== main ============================ */
+.main-section {
+  position: relative;
+  
+  width: 100vw;
+  height: 100vh;
+}
+.main-section:nth-child(2) {background-color: #888;}
+.main-section:nth-child(3) {background-color: #333;}
+
+.content__header
+.content__entry {
+  margin: 5px;
+  
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
 }
 
-/* ========= main - intro : title wrap ========= */
-.title-wrap {
+
+/* =========== main : intro area =========== */
+.intro {
+  background: url(/img/intro-bg.png);
+  background-size: cover;
+}
+
+
+/* ========= main : intro - title wrap ========= */
+.intro__text-wrap {
   position: absolute;
   top: 20vh;
   left: 19vw;
 }
-.title-wrap h1 {
+.intro__text-wrap h1 {
   margin: 0;
   margin-bottom: 6vh;
 
-  font-size: 4.2rem;
-  line-height: 4.2rem;
+  font-size: 6.25rem;
+  line-height: 6rem;
 }
-.title-wrap span {
+.intro__text-wrap span {
   font-family: 'Times New Roman';
-  font-size: 4.4rem;
+  font-size: 6.875rem;
   font-weight: 300;
 }
-.title-wrap p {
-  margin: 5px;
-  
-  font-size: .9rem;
-  font-weight: 100;
-  line-height: 1.3rem;
-}
 
-/* ========= main - intro : scroll wrap ========= */
+
+/* ========= main : intro - scroll wrap ========= */
 .scroll-wrap {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: absolute;
-  bottom: 10vh;
+  bottom: 12vh;
   left: 19vw;
 }
 .scroll-wrap span {
@@ -186,8 +196,16 @@ body {
   height: 45px;
   transform: rotate(-90deg);
 }
-.scroll-wrap img {margin-left: 4px;}
+.scroll-wrap img {margin-left: 0.25rem;}
 .text-guide {
-  font-size: .6rem;
+  font-size: .65rem;
   letter-spacing: .1rem;
+}
+
+
+
+/* ========== main : company area =========== */
+.company__text-wrap {
+  position: absolute;
+  top: 22.5rem;
 }
