Rename all of class name

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 
 /* =========== header ============ */
-.header {
+header {
   position: fixed;
   top: 0;
   z-index: 3;
@@ -28,11 +28,11 @@ body {
   
   width: 100vw;
 }
-.header-drop {
+.header-off {
   transform: translateY(-80px);
 }
 
-.header__container {
+.fst-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,7 +43,7 @@ body {
 
 
 /* =========== header : nav area ============ */
-.container__nav { 
+.fst-container__nav { 
   width: 44px;
 }
 
@@ -136,72 +136,67 @@ body {
 
 
 /* ========================== main ============================ */
-.main-section {
-  position: relative;
-  
+.main-container {  
   width: 100vw;
   height: 100vh;
 }
-.main-section:nth-child(2) {background-color: #888;}
-.main-section:nth-child(3) {background-color: #333;}
 
-.content__header
-.content__entry {
-  margin: 5px;
+.contents__header {}
+.contents__desc {
+  margin-left: .3rem;
   
-  font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem;
 }
-
-
-/* =========== main : intro area =========== */
-.intro {
-  background: url(/img/intro-bg.png);
-  background-size: cover;
-}
-
-
-/* ========= main : intro - title wrap ========= */
-.intro__text-wrap {
-  position: absolute;
-  top: 20vh;
-  left: 19vw;
-}
-.intro__text-wrap h1 {
-  margin: 0;
-  margin-bottom: 6vh;
-
-  font-size: 6.25rem;
-  line-height: 6rem;
-}
-.intro__text-wrap span {
+.contents__title {
+  margin-left: -.3rem;
+  
   font-family: 'Times New Roman';
   font-size: 6.875rem;
   font-weight: 300;
 }
 
 
-/* ========= main : intro - scroll wrap ========= */
-.scroll-wrap {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: absolute;
-  bottom: 12vh;
-  left: 19vw;
-}
-.scroll-wrap span {
-  margin-bottom: 8px;
-  height: 45px;
-  transform: rotate(-90deg);
-}
-.scroll-wrap img {margin-left: 0.25rem;}
-.text-guide {
-  font-size: .65rem;
-  letter-spacing: .1rem;
+/* =========== main : intro area =========== */
+.main__intro {
+  width: 100%;
+  height: 100%;
+
+  background: url(/img/intro-bg.png);
+  background-size: cover;
 }
 
+
+/* ========= main : intro - title wrap ========= */
+.intro__contents {
+  margin: 0 auto;
+  padding: 15rem 0 0 0;
+
+  width: 1180px;
+  height: 100vh;
+}
+.intro__contents h1 {
+  margin: 0;
+  margin-bottom: 5vh;
+
+  font-size: 6.25rem;
+  line-height: 6rem;
+}
+
+/* ========= main : intro - scroll wrap ========= */
+.intro__scroll-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 9.5rem;
+}
+.next-text {
+  height: 50px;
+
+  font-size: .7rem;
+  letter-spacing: .1rem;
+}
+.next-icon {margin-left: 0.3rem;}
 
 
 /* ========== main : company area =========== */
