--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,13 @@
   -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   
-  font-family: 'IBM Plex Sans';
-  font-size: 16px;
 } *::-webkit-scrollbar {
   display: none;
+}
+
+html {
+  font-family: 'IBM Plex Sans';
+  font-size: 10px;
 }
 
 body {
@@ -76,7 +79,7 @@ header {
 .menu__overlay-list {
   position: fixed;
   left: 0;
-  z-index: 10;
+  z-index: 30;
   padding: 8vh;
 
   width: 100vw;
@@ -93,7 +96,6 @@ header {
   display: flex;
   flex-flow: column nowrap;
   justify-content: start;
-  z-index: 10;
   padding: 0;
   margin: 0 auto;
 
@@ -103,7 +105,7 @@ header {
 .list__items {
   margin: .2rem;
   
-  font-size: 2.6rem;
+  font-size: 7.2rem;
   font-weight: 600;
   list-style: none;
 }
@@ -119,16 +121,13 @@ header {
   align-items: center;
   margin-top: 8vh;
   width: 30vw;
-  font-size: 1.8rem;
-}
-
-.lang-list {
-  margin: .4rem;
+  font-size: 4rem;
 }
 
 .lang-bar {
+  margin: 8px 16px 0 16px;
   width: 1px;
-  height: 1.5rem;
+  height: 3rem;
 
   background-color: #fff;
 }
@@ -137,13 +136,11 @@ header {
 
 /* ========================== main ============================ */
 .main-container { 
-  position: relative;
   width: 100vw;
   height: 100vh;
 }
 
 .main__intro, .main__company {
-  position: fixed;
   width: 100%;
   height: 100%;
 }
@@ -151,43 +148,43 @@ header {
 .intro__contents, .company__contents {
   margin: 0 auto;
 
-  width: 1180px;
+  width: 64vw;
   height: 100vh;
 }
 
 .contents__header {
   margin: 0;
-  margin-bottom: 4rem;
+  margin-bottom: 4vw;
 
-  font-size: 4rem;
-  line-height: 4rem;
+  font-size: 6.4rem;
+  line-height: 100%;
   color: #f50008;
 }
 
 .contents__header-serif {
   font-family: 'Times New Roman';
-  font-size: 4rem;
   font-weight: 300;
   color: #fff;
 }
 
 .contents__desc {
   margin: 0;
-  margin-left: .3rem;
+  margin-left: .3vw;
 
+  font-size: 1.8rem;
   font-weight: 300;
-  line-height: 1.5rem;
+  line-height: 150%;
 }
 
 .next-text {
   height: 50px;
 
-  font-size: .7rem;
-  letter-spacing: .14rem;
+  font-size: 1.2rem;
+  letter-spacing: .1rem;
 }
 
 .next-icon {
-  margin-left: .4rem;
+  margin-left: .3vw;
 }
 
 
@@ -200,15 +197,16 @@ header {
 
 
 .intro__contents {
-  padding: 16rem 0 0 0;
+  padding: 12vw 0 0 0;
 }
 
 .intro__contents h1 {
   margin: 0;
-  margin-bottom: 4rem;
+  margin-bottom: 4vh;
 
-  font-size: 6.25rem;
-  line-height: 6rem;
+  font-size: 10rem;
+  line-height: 100%;
+  word-spacing: 1px;
 }
 
 .intro__scroll-box {
@@ -216,20 +214,21 @@ header {
   flex-direction: column;
   align-items: flex-start;
 
-  margin-top: 12rem;
+  margin-top: 14.4vh;
 }
 
 
 
 /* ========== main : company area =========== */
 .main__company {
-  top: 100%;
+  position: absolute;
+  top: 0;
 }
 
 .company__contents {
   display: flex;
   flex-direction: column;
-  padding: 20rem 0 0 0;
+  padding: 24vh 0 0 0;
   
   background-color: #555;
 }
