--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ header {
   height: 100vh;
 }
 
-.main__intro, .main__company {
+.main__intro, .main__company, .main__recruit {
   width: 100%;
   height: 100%;
 }
@@ -268,4 +268,18 @@ header {
 
 .product__img-box {
   width: 46rem;
+}
+
+
+
+/* ========== main : recruit area =========== */
+.recruit__contents {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 64vw;
+  height: 50rem;
+  margin-top: 24vh;
+  padding: 0 5vw;
 }
